fixed alignment issue

--- a/styles/361.less
+++ b/styles/361.less
@@ -242,7 +242,7 @@ blockquote::after, .quote-block blockquote::after, .sqs-block-quote  blockquote:
 }
 
 #content, .full-form {
-	.video-title h1, h2, h1 {
+	.video-title h1, h2, .sqs-block-content > h1 {
 		text-align: center;
     font-family: "omnes-pro";
     font-size: 34px;
